# ibntaymiyya-corpus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
annotate/streamlit/: app.py
data/annotations/: README.md
data/canonical/: README.md  iman_standalone_v0.1.json  mecmu_v01_v0.1.json  mecmu_v02_v0.1.json  mecmu_v03_v0.1.json  mecmu_v04_v0.1.json  mecmu_v05_v0.1.json  mecmu_v06_v0.1.json  mecmu_v07_v0.1.json  mecmu_v08_v0.1.json  mecmu_v09_v0.1.json  mecmu_v10_v0.1.json  mecmu_v11_v0.1.json  mecmu_v12_v0.1.json  mecmu_v13_v0.1.json  mecmu_v14_v0.1.json  mecmu_v15_v0.1.json  mecmu_v16_v0.1.json  mecmu_v17_v0.1.json  mecmu_v18_v0.1.json  mecmu_v19_v0.1.json  mecmu_v20_v0.1.json  mecmu_v21_v0.1.json  mecmu_v22_v0.1.json  mecmu_v23_v0.1.json  mecmu_v24_v0.1.json  mecmu_v25_v0.1.json  mecmu_v26_v0.1.json  mecmu_v27_v0.1.json  mecmu_v28_v0.1.json  mecmu_v29_v0.1.json  mecmu_v30_v0.1.json  mecmu_v31_v0.1.json  mecmu_v32_v0.1.json  mecmu_v33_v0.1.json  mecmu_v34_v0.1.json  mecmu_v35_v0.1.json  tedmuriyye_v0.1.json
data/derived/: cross_corpus_h2_shingle_v0.1.json  cross_corpus_h2_tfidf_char_v0.1.json  cross_corpus_h2_tfidf_word_v0.1.json
docs/atolye/: CLAUDE_BASELINE_REPORT.md  EMAIL_TASLAGI.txt  (+3 more)
notebooks/: 01_iman_exploration.py  02_cross_corpus_analysis.py  README.md
scripts/: NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROMPT_V2.md  build_review_xlsx.py  claude_baseline_annotation.py  generate_h2_review_set.py
sessions/: 2026-04-30-faz0-hafta1-S6-S7.md  2026-04-30-faz0-hafta1.md  2026-04-30-faz0-hafta2-s3.md  2026-04-30-faz0-hafta2-s4.md  README.md
(+36 files in other folders)
