[project]
name = "ibntaymiyya-corpus"
version = "0.1.0"
description = "Ibn Taymiyya Computational Stance Mapping System"
requires-python = ">=3.11"
authors = [
    {name = "Ali Çetinkaya", email = "ali.cetinkaya@selcuk.edu.tr"},
    {name = "Hüseyin Gökalp"}
]
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line-length tarafından zaten yönetiliyor

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
